<resources>
    <string name="app_name">PHIRE</string>

    <string name="action_settings">Settings</string>
    <string name="trigger_service">Trigger Service</string>
    <string name="select_wheel_diameter_cm">Select Wheel Diameter(Inch)</string>
    <string name="select_panobike_sensor">Select PanoBike Sensor</string>
    <string name="select_survey">Select Survey</string>
    <string name="select_language">Select Language</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_start_date_survey">Select Start Date For Weekly Survey</string>
    <string name="select_end_date">Select End Date</string>
    <string name="start_demo">Start Survey Demo</string>
    <string name="start_demo_intervene">Start Intervention Demo</string>
    <string name="select_wake_time">Select Wake Time</string>
    <string name="select_sleep_time">Select Sleep Time</string>
    <string name="start_saliva_demo">Start Saliva Demo</string>
    <string name="compliance">Compliance</string>
    <string name="finish_study">Finish Study</string>

    <string name="text_sensor"> PanoBike Sensor : </string>
    <string name="none">None</string>
    <string name="scan_for_devices">Scan For Device</string>
    <string name="force_app_crash">Force App Crash</string>

    <string name="participant">Participant Info</string>
    <string name="title_activity_participant_info">ParticipantInfo</string>

    <string name="gender">Male</string>
    <string name="sciLevel">Paraplagia</string>
    <string name="completeness">Complete</string>
    <string name="enterInfo">Done</string>
    <string name="text_weight">Weight (lb):</string>
    <string name="text_age">Age</string>
    <string name="text_height_ft">Height(ft):</string>
    <string name="text_height_in">Height(inch)</string>

    <string name="age">Age:</string>
    <string name="genderText">Gender:</string>
    <string name="sciLevelText">Sci Level:</string>
    <string name="completenessText">Completeness:</string>

    <string name="EEprofile">Check Energy Expenditure / Distance traveled</string>
    <string name="EEtitle">Weekly Energy Expenditure (kCal)</string>

    <string name="DistanceProfile">Check Distance traveled</string>
    <string name="DistanceTitle">Weekly Distance travelled (miles)</string>

    <string name="EEgoalSelect"> Change daily EE goal from </string>
    <string name="DistanceGoalSelect"> Change daily distance goal from </string>

    <string name="Done">Done</string>

    <string name="CurrentInfo">Check EE and distance</string>

    <string name="WeekInfoEE">Weekly EE profile</string>
    <string name="WeekInfoDistance">Weekly distance profile</string>

    <string name="currentEEtitle">Energy Expenditure (kCal)</string>
    <string name="currentDistTitle">Distance Travelled (miles)</string>


    <string name="feedback">Participant Feedback</string>

    <string name="needfordistance">Distance from:</string>
    <string name="needfordatatransfer">Transfer data:</string>

    <string name="speed">Speed</string>
    <string name="wifi">WiFi</string>

    <string name="SelectDailyGoal">Select Daily Goal</string>

    <string name="EnterPhaseTwo">Enter Month Two</string>
    <string name="EnterPhaseThree">Enter Month Three</string>


    <string name="weeklySurveyDay">Select Day For Weekly Survey</string>
    <string name="weeklySurveyStartTime">Select Start Time For Weekly Survey</string>
    <string name="weeklySurveyStopTime">Select Stop Time For Weekly Survey</string>

</resources>
