<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="mhealth.neu.edu.phire.activities.ParticipantInfoActivity"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/ageCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/text_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderText"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/genderCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_weight"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/weightCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/height_ft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_height_ft"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/heightFtCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/heightInCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/text_sciLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sciLevelText"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/sciLevelCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/text_completeness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completenessText"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/completenessCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/text_distanceCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/needfordistance"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/distanceCalcUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/text_dataTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/needfordatatransfer"
                    android:textSize="@dimen/view_text_size_p_info"
                    />
                <EditText
                    android:id="@+id/transferDataAlways"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/black"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/text_height_ft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/view_text_size_p_info"
                    android:text="@string/text_height_ft"
                    android:layout_weight="1"
                    />

                <NumberPicker android:id="@+id/heightFtPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_weight="2"/>


            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/text_height_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/view_text_size_p_info"
                    android:text="@string/text_height_in"
                    android:layout_weight="1"
                    />
                <NumberPicker android:id="@+id/heightIncPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_weight="2"/>

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <CheckBox
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/gender"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/sciLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/sciLevel"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/completeness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/completeness"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/text_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/view_text_size_p_info"
                    android:text="@string/text_weight"
                    android:layout_weight="1"
                    />

                <NumberPicker android:id="@+id/weightPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_weight="2"/>


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/text_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/view_text_size_p_info"
                    android:text="@string/text_age"
                    android:layout_weight="1"
                    />

                <NumberPicker android:id="@+id/agePickerFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_weight="2"/>

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <CheckBox
                    android:id="@+id/needspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/speed"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/transferdata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/wifi"
                    android:layout_weight="1"/>


            </LinearLayout>



        </LinearLayout>


        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--&gt;-->

            <!--<CheckBox-->
                <!--android:id="@+id/gender"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="@string/gender"-->
                <!--android:layout_weight="1"/>-->

            <!--<CheckBox-->
                <!--android:id="@+id/sciLevel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="@string/sciLevel"-->
                <!--android:layout_weight="1"/>-->

            <!--<CheckBox-->
                <!--android:id="@+id/completeness"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="@string/completeness"-->
                <!--android:layout_weight="1"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--&gt;-->

            <!--<CheckBox-->
                <!--android:id="@+id/needspeed"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="@string/speed"-->
                <!--android:layout_weight="1"/>-->

            <!--<CheckBox-->
                <!--android:id="@+id/transferdata"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:text="@string/wifi"-->
                <!--android:layout_weight="1"/>-->


        <!--</LinearLayout>-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/view_text_size_diameter"
                android:text="@string/Done"
                android:onClick="onClick"/>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>
