<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mhealth.neu.edu.phire.panobike.SelectSensorActivity"
    android:layout_weight="4">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/text_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/view_text_size_diameter"
            android:text="@string/text_sensor"
            android:layout_weight="1"
            />


        <TextView
            android:id="@+id/current_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/view_text_size_diameter"
            android:layout_weight="1"
            android:text="@string/none"
            />
    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <Button
            android:id="@+id/button_scan_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/view_text_size_diameter"
            android:text="@string/scan_for_devices"
            android:onClick="onClick"
            android:layout_weight="1"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">
            <RadioGroup
                android:id="@+id/sensor_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>
    </LinearLayout>




</LinearLayout>
