<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_daily_goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mhealth.neu.edu.phire.activities.SelectDailyGoal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5"
        >

        <TextView
            android:id="@+id/selectEEgoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EEgoalSelect"
            android:gravity="left"
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/selectedEEgoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <NumberPicker android:id="@+id/eeGoalPicker"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_gravity="center_horizontal"
            android:descendantFocusability="blocksDescendants"
            android:isScrollContainer="false" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:layout_weight="4"
    >

    <TextView
    android:id="@+id/selectDistanceGoal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/DistanceGoalSelect"
    android:gravity="left"
    android:textSize="15sp"
    android:paddingTop="15dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

    <TextView
    android:id="@+id/selectedDistanceGoal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="15sp"
    android:layout_gravity="center_horizontal"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

    <NumberPicker android:id="@+id/distGoalPicker"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:scaleX="0.8"
    android:scaleY="0.8"
    android:layout_weight="2"
    android:descendantFocusability="blocksDescendants"
    android:isScrollContainer="false" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/SelectGoalDone"/>

</LinearLayout>
